Added menu, css, components, auth template.

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#root > div:not(:first-child) {
+  margin: 15px 5%;
+}
