--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .menuBar {
     width: 90%;
-    padding: 25px 5%;
+    padding: 15px 5%;
     margin-bottom: 60px;
     color: white;
     /* color: lightpink; */
@@ -10,6 +10,27 @@
     background-size: cover;
     background-image: linear-gradient( 270deg, rgba(176, 42, 42, .16) 0%, rgba(176, 42, 42, .56) 18.45%, rgba(176, 42, 42, .8) 49.67%, rgba(176, 42, 42, .56) 82.52%, rgba(176, 42, 42, .196364) 99.7%, rgba(189, 40, 40, 0) 99.71%, rgba(203, 56, 55, 0) 99.72%, rgba(203, 56, 55, .16) 99.73%), url(https://static.npmjs.com/abf53a31b2da4657a1a004ee9358551c.png);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  }
+
+  .logo a {
+    display: flex;
+    align-items: center;
+    color: rgb(255, 200, 208);
+    transition: ease-in-out 250ms;
+  }
+
+  .logo a:hover {
+    transform: scale(0.98);
+    text-decoration: none;
+    color: wheat;
+  }
+
+  .logo_x {
+    height: 65px;
+    width: 80px;
+    background-size: 125%;
+    background-position: center;
+    background-image: url('https://cdn.shopify.com/s/files/1/0533/2536/5445/files/Firefly_Botanical_Logo_Off_Pack-03-core.png?v=1611749339');
   }
 
   .links {
@@ -29,4 +50,8 @@
 
   a:hover {
     text-decoration: underline;
+  }
+
+  .user {
+    color: wheat;
   }
