--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@
     justify-content: space-between;
     align-items: flex-start;
     min-height: 100px;
+    margin-bottom: 15px;
   }
 
   button {
@@ -125,13 +126,13 @@
   }
 
   .ratings {
-    width: 20%;
+    width: 22.5%;
     padding-right: 25px;
     margin-top: 2px;
   }
 
   .questions {
-    width: 80%;
+    width: 77.5%;
   }
 
   .desc, .ratings {
@@ -142,3 +143,24 @@
     border: none;
     border-bottom: 1px solid rgb(230, 230, 230);
   }
+
+  .mainFeed input[type=text], textarea {
+    font-size: 0.825rem;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    width: 90%;
+    padding: 5px;
+}
+
+.whiteBtn {
+  background-color: white;
+  color: unset;
+  border-radius: 0;
+  margin-left: -1px;
+  border: 1px solid rgb(230, 230, 230);
+}
+
+.whiteBtn:hover {
+  background-color: #e3e6e8;
+}
