--- a/src/App.css
+++ b/src/App.css
@@ -167,9 +167,10 @@
 }
 
 .answers {
-  padding: 25px 0;
+  padding: 25px 0 35px 0;
   display: flex;
   flex-direction: column;
+  justify-items: flex-start;
   border-top: 1px solid rgb(230, 230, 230);
 }
 
@@ -180,4 +181,8 @@
 
 .question {
   color: #333333;
+}
+
+.underQuestion {
+  margin-top: -9px;
 }
